--- a/gitlab/defaults.yaml
+++ b/gitlab/defaults.yaml
@@ -3,5 +3,6 @@
 ---
 gitlab:
   runner:
+    config_path: /etc/gitlab-runner/
     gitlab-runner:
       downloadpath: 'https://packages.gitlab.com/runner/gitlab-runner/packages/linuxmint/sonya/gitlab-runner_10.4.0_amd64.deb/download'
