--- a/gitlab/defaults.yaml
+++ b/gitlab/defaults.yaml
@@ -10,5 +10,5 @@ gitlab:
         username: gitlab-runner
         downloadpath: 'https://packages.gitlab.com/runner/gitlab-runner/packages/linuxmint/sonya/gitlab-runner_10.4.0_amd64.deb/download'
         runners:
-          - gitlab-runner:
+          - name: gitlab-runner
             executor: shell
